# IR_plugin_Xuanyuan

./: .clang-format-common.sh  .gitignore  CMakeLists.txt  MyPlugin.h  README.md  vcpkg.json
.github/workflows/: build.yml
etc/: IRPlugin.in.yaml
src/: IRPlugin.cpp  IRPlugin.h  MyPlugin.cpp  MyPlugin.h
src/DTrackSDK/include/: DTrackSDK.hpp
src/DTrackSDK/src/: DTrackData.cpp  DTrackNet.cpp  DTrackParse.cpp  DTrackParser.cpp  DTrackSDK.cpp
tests/etc/: mc_rtc.yaml
